--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
       href="https://fonts.googleapis.com/css?family=Gamja+Flower"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="iziToast.min.css" />
+    <script src="iziToast.min.js" type="text/javascript"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -24,10 +26,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
